--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,8 @@ jobs:
         python-version: 3.7 
     
     - name: Install
+      env:
+        BRANCH: ${{ github.ref == 'refs/heads/master-overhaul' && 'master-overhaul' || 'master' }}
       shell: bash -l {0}
       run: |
         conda create --yes -n microsetta-interface python=3.7
@@ -91,7 +93,7 @@ jobs:
         python setup.py compile_catalog
         pip install -e . --no-deps
         
-        git clone https://github.com/biocore/microsetta-private-api.git
+        git clone -b $BRANCH --single-branch https://github.com/biocore/microsetta-private-api.git
         pushd microsetta-private-api
         pgport=${{ job.services.postgres.ports[5432] }}
         sed -i "s/self.port = 5432/self.port = $pgport/" microsetta_private_api/config_manager.py
