--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
     
     - name: Install
       env:
-        BRANCH: ${{ github.ref == 'refs/heads/master-overhaul' && 'master-overhaul' || 'master' }}
+        BRANCH: ${{ github.base_ref == 'master-overhaul' && 'master-overhaul' || 'master' }}
       shell: bash -l {0}
       run: |
         conda create --yes -n microsetta-interface python=3.7
