--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
         BRANCH: ${{ github.base_ref == 'master-overhaul' && 'master-overhaul' || 'master' }}
       shell: bash -l {0}
       run: |
+        echo Branch: $BRANCH
         conda create --yes -n microsetta-interface python=3.7
         conda activate microsetta-interface
         conda install --yes --file ci/conda_requirements.txt
