--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -282,7 +282,7 @@ paths:
 
   '/accounts/{account_id}/create_human_source':
     get:
-      operationId: microsetta_interface.implementation.get_create_human_source
+      operationId: microsetta_interface.implementation.get_consent_page
       tags:
         - Source
       parameters:
@@ -350,9 +350,9 @@ paths:
               schema:
                 type: string
 
-  '/accounts/{account_id}/check_duplicate_source_name_email':
+  '/accounts/{account_id}/check_duplicate_source':
     post:
-      operationId: microsetta_interface.implementation.check_duplicate_source_name_email
+      operationId: microsetta_interface.implementation.check_duplicate_source
       tags:
         - Source
       parameters:
