--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: set up python 3.7
+    - name: set up python 3.6
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.6
     - name: lint it
       run: python -m pip install --upgrade pip
     - name: lint
@@ -82,8 +82,6 @@ jobs:
         python-version: 3.7 
     
     - name: Install
-      env:
-        BRANCH: ${{ github.ref == 'refs/heads/master-overhaul' && 'master-overhaul' || 'master' }}
       shell: bash -l {0}
       run: |
         conda create --yes -n microsetta-interface python=3.7
@@ -93,7 +91,7 @@ jobs:
         python setup.py compile_catalog
         pip install -e . --no-deps
         
-        git clone -b $BRANCH --single-branch https://github.com/biocore/microsetta-private-api.git
+        git clone https://github.com/biocore/microsetta-private-api.git
         pushd microsetta-private-api
         pgport=${{ job.services.postgres.ports[5432] }}
         sed -i "s/self.port = 5432/self.port = $pgport/" microsetta_private_api/config_manager.py
