--- a/microsetta_interface/server_config.json
+++ b/microsetta_interface/server_config.json
@@ -13,6 +13,5 @@
   "ssl_key_path": null,
   "CAfile": null,
   "authrocket_url": "https://jubilant-smoke-a54b.e2.loginrocket.com",
-  "FLASK_SECRET_KEY": null,
-  "fundrazr_url": "https://fundrazr.com/microsetta"
+  "FLASK_SECRET_KEY": null
 }
