Addressing production testing feedback

--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -792,6 +792,11 @@ paths:
           schema:
             type: string
             nullable: true
+        - in: query
+          name: vio_id
+          schema:
+            type: string
+            nullable: true
       responses:
         '200':
           description: Take the vioscreen remote survey
