--- a/microsetta_interface/routes.yaml
+++ b/microsetta_interface/routes.yaml
@@ -595,7 +595,6 @@ paths:
       parameters:
         - $ref: '#/components/parameters/account_id'
       requestBody:
-        required: true
         content:
           application/x-www-form-urlencoded:
             schema:
@@ -606,23 +605,12 @@ paths:
                   nullable: true
       responses:
         '200':
-          description: Display of revised info or error info
+          description: Remove account request submitted
           content:
             text/html:
               schema:
                 type: string
-        '403':
-          description: Forbidden
-          content:
-            text/html:
-              schema:
-                type: string
-        '404':
-          description: Not Found
-          content:
-            text/html:
-              schema:
-                type: string
+
 
   '/accounts/{account_id}/sources/{source_id}/claim_samples':
     post:
