--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: set up python 3.7
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.7
     - name: lint it
@@ -22,7 +22,7 @@ jobs:
         pip install -q flake8
         flake8 microsetta_interface
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
 
@@ -47,7 +47,7 @@ jobs:
         conda activate test-microsetta-interface
         pytest
   integration:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
       
     # Service containers to run with `runner-job`
     services:
